--- a/Activity_1_Python_Fundamentals.ipynb
+++ b/Activity_1_Python_Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Activity 1 - Python Fundamentals",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNqAhUpPQuQ3xLUdmHQ0o3L",
+      "authorship_tag": "ABX9TyNqmNw+YnJLd0gh0lrQTiiJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
         "id": "vD8847j2tuPc",
         "outputId": "59e5d2ad-2058-41a0-9a5e-33c64a17a70a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,7 +96,7 @@
         "id": "27r2fVIRup0e",
         "outputId": "b38d1d06-f2a8-4950-f44f-b8490b50052b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +122,7 @@
         "id": "je0dbMf5vc2U",
         "outputId": "df3bf597-324f-402f-b486-f5790a29d6af"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +149,7 @@
         "id": "KYin7tkxvj_3",
         "outputId": "7b7bef86-e07f-4cd1-f0a1-3583120172b8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +176,7 @@
         "id": "gVNJkUoGv2nh",
         "outputId": "38b41ee0-0fbf-45a3-e58e-7fce7ca5fd6e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -203,7 +203,7 @@
         "id": "SumnEcBkwxLn",
         "outputId": "6050742d-897a-4eb2-87e1-bad502e120c0"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
         "id": "_J0hNo0YxMZc",
         "outputId": "3eb939fd-ac3f-4d47-f1f9-c2bea996fba5"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +270,7 @@
       "metadata": {
         "id": "fHHDyIgyyR1m"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
         "id": "1PDpYgeLyqRF",
         "outputId": "1fb89e70-7e10-4174-d072-f0881cca6d34"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +316,7 @@
         "id": "HoFtM59IzUw2",
         "outputId": "c86c3622-d8c4-4f0f-b938-43afea9a9e6b"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -344,7 +344,7 @@
         "id": "YHQUFw76zmzg",
         "outputId": "e8fd6c4c-5100-4322-ac3a-28b206e90e86"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -372,7 +372,7 @@
         "id": "U4FLTwMlzzg9",
         "outputId": "1c474dbb-4bc3-464a-fefb-657684745c93"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +400,7 @@
         "id": "w1CWheHo0HiO",
         "outputId": "cf1fb6fa-05cc-435f-f0e2-fdd39a75d6ff"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +428,7 @@
         "id": "5Z91GNeR0evW",
         "outputId": "97f02b20-bd92-4dc8-a2e2-439f1f708b82"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,7 +456,7 @@
         "id": "vbV69m4o03lR",
         "outputId": "e36f13c1-cb9e-4f6a-e2f3-894e9cb4602f"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
       "metadata": {
         "id": "iNq8UHYm1jM-"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,7 +503,7 @@
         "id": "rm6QbbgF1zWk",
         "outputId": "7bebf0e3-a462-4113-ee80-b316e1b4ad5c"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -530,7 +530,7 @@
         "id": "NcS88WPx2EK6",
         "outputId": "7795f41c-57a6-407b-f2d2-2401e86e4262"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +557,7 @@
         "id": "pnbi33qc2ZT3",
         "outputId": "77118b5d-2722-455b-a692-820a55994496"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +584,7 @@
         "id": "xQ5G-XZ23RqM",
         "outputId": "6660b60c-3f54-4a25-ed58-cac8c211b9b1"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -616,7 +616,7 @@
       "metadata": {
         "id": "lbKc0ECE3Zd9"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -632,7 +632,7 @@
         "id": "GrCRstnk3lV-",
         "outputId": "b9abb6e6-d60a-4180-e2e9-ff877c9d93b1"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +659,7 @@
         "id": "7rDSyL9u3q1G",
         "outputId": "a7f3f3b5-ffb8-4fcd-89d2-8c1c39a61fab"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +690,7 @@
         "id": "GjeiAjfj35IY",
         "outputId": "38e70d28-efc6-49c2-a693-b2ae7225533d"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -725,7 +725,7 @@
         "id": "xppTpDaf48qh",
         "outputId": "381b01e0-8406-47a3-848e-3c0a20fe9a36"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -751,7 +751,7 @@
         "id": "mHNb4BX15lMF",
         "outputId": "020e3186-ab03-427c-c221-b9f76dded056"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +777,7 @@
         "id": "GeSzrGF76RnQ",
         "outputId": "786530b5-71f2-47bf-fa06-9414e2d41de9"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -805,7 +805,7 @@
         "id": "mg1blYcE6V7f",
         "outputId": "ebe283a1-f9d1-4c34-ed22-76d23e4611bb"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -833,7 +833,7 @@
         "outputId": "909f9d5c-ee9d-41da-8e3c-9e77fde24c7c",
         "id": "HTfhtRpQ7MfZ"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +861,7 @@
         "id": "B5KumY1q7o59",
         "outputId": "380c3c54-ca4b-44e9-cff2-d9b0a3d73100"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -894,9 +894,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Hh3zQf_8GDc",
-        "outputId": "de0e95e1-57fa-4df4-8127-bf8163239f73"
+        "outputId": "1f09298f-8385-4033-c565-240d8b5af54b"
       },
-      "execution_count": 144,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -915,7 +915,7 @@
       "metadata": {
         "id": "_IMAflap8RJI"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +932,7 @@
         "id": "N4xmGQgu8W91",
         "outputId": "93861d31-b3a9-4d79-a71b-9cf1915e3a28"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -955,7 +955,7 @@
         "id": "csul91wQ9AIf",
         "outputId": "d9ad3395-9a60-411d-f70a-3d31f418fcc8"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,41 +980,13 @@
         "id": "e3Tl7vaQ9WHB",
         "outputId": "fcabd974-96ff-4953-aa62-89139f6e1ae3"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Hello Gaeb, your semestral grade is: 82.24356465746123\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "w_pg, w_mg, w_fg = 0.3, 0.3, 0.4\n",
-        "print(\"The weights of your semestral grades are: \\ \n",
-        "\\n\\t{:.2} for Prelims\\\n",
-        "\\n\\t{:.2}"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
-        },
-        "id": "rv3_XU0s9-h2",
-        "outputId": "76b4b010-da1f-46a8-c35a-45609f77537a"
-      },
-      "execution_count": 155,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-155-75eedc3cebbb>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(\"The weights of your semestral grades are: \\\u001b[0m\n\u001b[0m                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
           ]
         }
       ]
@@ -1029,6 +1001,383 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w_pg, w_mg, w_fg = 0.3, 0.3, 0.4\n",
+        "print(\"The weights of your semestral grades are:\\\n",
+        "\\n\\t{:.2%} for Prelims\\\n",
+        "\\n\\t{:.2%} for Midterms, and\\\n",
+        "\\n\\t{:.2%} for Finals.\".format(w_pg, w_mg, w_fg))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rv3_XU0s9-h2",
+        "outputId": "fe1d78b0-2bf4-4c50-a0c7-30e60bff43e6"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The weights of your semestral grades are:\n",
+            "\t30.00% for Prelims\n",
+            "\t30.00% for Midterms, and\n",
+            "\t40.00% for Finals.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "kHh3kvaa_3ey"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = input (\"enter a number: \")\n",
+        "x"
+      ],
+      "metadata": {
+        "id": "p7Rc7Gfru-P0",
+        "outputId": "f5da80e6-bbca-4cab-a65e-80c05490fca2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "enter a number: 15\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'15'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input(\"Kimi no awa: \")\n",
+        "pg = input(\"Enter prelim grade: \")\n",
+        "mg = input(\"Enter midterm grade: \")\n",
+        "fg = input(\"Enter finals grade: \")\n",
+        "sem_grade = None\n",
+        "print(\\\"Hello {}, your semestral grade is: {}\".format(name, sem_grade))"
+      ],
+      "metadata": {
+        "id": "5qACTOxGvT4L",
+        "outputId": "08e6e125-6f24-4ba8-969b-36fa7de39e15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kimi no awa: gaeb\n",
+            "Enter prelim grade: 97\n",
+            "Enter midterm grade: 94.3\n",
+            "Enter finals grade: 90.67\n",
+            "Hello gaeb, your semestral grade is: None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### While "
+      ],
+      "metadata": {
+        "id": "7kkqKJg1w2ej"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## while loops\n",
+        "i, j = 0, 10\n",
+        "while(i<=j):\n",
+        "  print(f\"{i}\\t|\\t{j}\")\n",
+        "  i+=1"
+      ],
+      "metadata": {
+        "id": "OjLOptB2xIF8",
+        "outputId": "7033c9d5-445d-4c08-eff0-260e430dd774",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\t|\t10\n",
+            "1\t|\t10\n",
+            "2\t|\t10\n",
+            "3\t|\t10\n",
+            "4\t|\t10\n",
+            "5\t|\t10\n",
+            "6\t|\t10\n",
+            "7\t|\t10\n",
+            "8\t|\t10\n",
+            "9\t|\t10\n",
+            "10\t|\t10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###For"
+      ],
+      "metadata": {
+        "id": "oW1De7RpyHoz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for(int i=0; i<10; i++){\n",
+        "# printf(i)\n",
+        "# }\n",
+        "\n",
+        "i=0\n",
+        "for i in range (15):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "4NmeHNhXx9IP",
+        "outputId": "e44b71b3-65ce-4a58-a5e5-c2db87531c64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "playlist = [\"Perfect\", \"Kailan\", \"Tayo Nalang\"]\n",
+        "print('Now Playing:\\n')\n",
+        "for song in playlist:\n",
+        "    print(song)\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "C0un_3fTykiE",
+        "outputId": "eaea2ba9-c7bd-4537-8d9c-0aaaf4cd184f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Now Playing:\n",
+            "\n",
+            "Perfect\n",
+            "Kailan\n",
+            "Tayo Nalang\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Condition Statements"
+      ],
+      "metadata": {
+        "id": "rgKzrzMMzQ-Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeral1, numeral2 = 13,14\n",
+        "if(numeral1 == numeral2):\n",
+        "  print(\"Yey\")\n",
+        "elif(numeral1>numeral2):\n",
+        "  print(\"Hoho\")\n",
+        "else:\n",
+        "  print(\"Aww\")"
+      ],
+      "metadata": {
+        "id": "rdrwoUXVzUwd",
+        "outputId": "7f631c30-c2ea-43c2-f869-076d15cb15c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Aww\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Functions"
+      ],
+      "metadata": {
+        "id": "bCiUIpl91h0v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# void DeleteUser(int userid){\n",
+        "#      delete(userid);\n",
+        "# }\n",
+        "\n",
+        "def delete_user (userid):\n",
+        "    print(\"Successfully deleted all user: {}\".format(userid))\n",
+        "\n",
+        "def delete_all_users ():\n",
+        "    print(\"Perfect.\")"
+      ],
+      "metadata": {
+        "id": "XUid6wB81kKr"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "userid = \"Gaeb\"\n",
+        "delete_user(\"Gaeb\")\n",
+        "delete_all_users()"
+      ],
+      "metadata": {
+        "id": "r29yPQVI2ZAd",
+        "outputId": "b7abd2f5-8d1a-47d8-bd0d-6a8fe696b5e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully deleted all user: Gaeb\n",
+            "Perfect.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(addend1, addend2):\n",
+        "  return addend1 + addend2\n",
+        "\n",
+        "def power_of_base2(exponent):\n",
+        "  return 2**exponent"
+      ],
+      "metadata": {
+        "id": "SJRGvwco3m-9"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#addend1, addend2 = 55, 70\n",
+        "#add(addend1, addend2)\n",
+        "\n",
+        "exponent = 15\n",
+        "power_of_base2(exponent)"
+      ],
+      "metadata": {
+        "id": "Xwf0u9vM4An8",
+        "outputId": "d0b002e3-c906-40d8-bf88-c444d87b582f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32768"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     }
   ]
 }
