--- a/Activity_1_Python_Fundamentals.ipynb
+++ b/Activity_1_Python_Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Activity 1 - Python Fundamentals",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNqmNw+YnJLd0gh0lrQTiiJ",
+      "authorship_tag": "ABX9TyM4i/eKWgmBVS9uYBQYnM0a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -894,7 +894,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Hh3zQf_8GDc",
-        "outputId": "1f09298f-8385-4033-c565-240d8b5af54b"
+        "outputId": "de0e95e1-57fa-4df4-8127-bf8163239f73"
       },
       "execution_count": null,
       "outputs": [
@@ -994,7 +994,23 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "w_pg, w_mg, w_fg = 0.3, 0.3, 0.4\n",
+        "print(\"The weight of your semestral grades are:\\\n",
+        "\\n\\t{:.2%} for Prelims\\\n",
+        "\\n\\t{:.2%} for Midterms, and\\\n",
+        "\\n\\t{:.2%} for Finals.\".format(w_pg, w_mg, w_fg))"
+      ],
+      "metadata": {
+        "id": "rv3_XU0s9-h2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = input(\"enter a number\")\n",
+        "x"
       ],
       "metadata": {
         "id": "ByXapxFr_6Bo"
@@ -1005,159 +1021,51 @@
     {
       "cell_type": "code",
       "source": [
-        "w_pg, w_mg, w_fg = 0.3, 0.3, 0.4\n",
-        "print(\"The weights of your semestral grades are:\\\n",
-        "\\n\\t{:.2%} for Prelims\\\n",
-        "\\n\\t{:.2%} for Midterms, and\\\n",
-        "\\n\\t{:.2%} for Finals.\".format(w_pg, w_mg, w_fg))"
+        "name = input(\"Kimi no nawa: \")\n",
+        "pg = input(\"Enter prelim grade: \")\n",
+        "mg = input(\"Enter midterm grade: \")\n",
+        "fg = input(\"Enter final grade: \")\n",
+        "sem_grade = None\n",
+        "print(\"Hello {}, your semestral grade is: {}\".format(name, sem_grade))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rv3_XU0s9-h2",
-        "outputId": "fe1d78b0-2bf4-4c50-a0c7-30e60bff43e6"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The weights of your semestral grades are:\n",
-            "\t30.00% for Prelims\n",
-            "\t30.00% for Midterms, and\n",
-            "\t40.00% for Finals.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "kHh3kvaa_3ey"
+        "id": "DWozfWMXN0JG"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "x = input (\"enter a number: \")\n",
-        "x"
+        "##Looping Statements"
       ],
       "metadata": {
-        "id": "p7Rc7Gfru-P0",
-        "outputId": "f5da80e6-bbca-4cab-a65e-80c05490fca2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "enter a number: 15\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'15'"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "name = input(\"Kimi no awa: \")\n",
-        "pg = input(\"Enter prelim grade: \")\n",
-        "mg = input(\"Enter midterm grade: \")\n",
-        "fg = input(\"Enter finals grade: \")\n",
-        "sem_grade = None\n",
-        "print(\\\"Hello {}, your semestral grade is: {}\".format(name, sem_grade))"
-      ],
-      "metadata": {
-        "id": "5qACTOxGvT4L",
-        "outputId": "08e6e125-6f24-4ba8-969b-36fa7de39e15",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Kimi no awa: gaeb\n",
-            "Enter prelim grade: 97\n",
-            "Enter midterm grade: 94.3\n",
-            "Enter finals grade: 90.67\n",
-            "Hello gaeb, your semestral grade is: None\n"
-          ]
-        }
-      ]
+        "id": "pbAM0t2IOBoT"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### While "
+        "###While"
       ],
       "metadata": {
-        "id": "7kkqKJg1w2ej"
+        "id": "yLYZa7foOHZG"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "## while loops\n",
-        "i, j = 0, 10\n",
+        "## white loops\n",
+        "i, j = 0, 12\n",
         "while(i<=j):\n",
         "  print(f\"{i}\\t|\\t{j}\")\n",
         "  i+=1"
       ],
       "metadata": {
-        "id": "OjLOptB2xIF8",
-        "outputId": "7033c9d5-445d-4c08-eff0-260e430dd774",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "DcFF3tfgOI7X"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\t|\t10\n",
-            "1\t|\t10\n",
-            "2\t|\t10\n",
-            "3\t|\t10\n",
-            "4\t|\t10\n",
-            "5\t|\t10\n",
-            "6\t|\t10\n",
-            "7\t|\t10\n",
-            "8\t|\t10\n",
-            "9\t|\t10\n",
-            "10\t|\t10\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1165,145 +1073,22 @@
         "###For"
       ],
       "metadata": {
-        "id": "oW1De7RpyHoz"
+        "id": "_alez_JHUpd6"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# for(int i=0; i<10; i++){\n",
-        "# printf(i)\n",
-        "# }\n",
+        "#for(int i=0: i<10, i++){\n",
+        "    #printf(i)\n",
+        "    #}\n",
         "\n",
-        "i=0\n",
-        "for i in range (15):\n",
+        "i = 0\n",
+        "for i in range(11):\n",
         "  print(i)"
       ],
       "metadata": {
-        "id": "4NmeHNhXx9IP",
-        "outputId": "e44b71b3-65ce-4a58-a5e5-c2db87531c64",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n",
-            "10\n",
-            "11\n",
-            "12\n",
-            "13\n",
-            "14\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "playlist = [\"Perfect\", \"Kailan\", \"Tayo Nalang\"]\n",
-        "print('Now Playing:\\n')\n",
-        "for song in playlist:\n",
-        "    print(song)\n",
-        "  "
-      ],
-      "metadata": {
-        "id": "C0un_3fTykiE",
-        "outputId": "eaea2ba9-c7bd-4537-8d9c-0aaaf4cd184f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Now Playing:\n",
-            "\n",
-            "Perfect\n",
-            "Kailan\n",
-            "Tayo Nalang\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "###Condition Statements"
-      ],
-      "metadata": {
-        "id": "rgKzrzMMzQ-Q"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "numeral1, numeral2 = 13,14\n",
-        "if(numeral1 == numeral2):\n",
-        "  print(\"Yey\")\n",
-        "elif(numeral1>numeral2):\n",
-        "  print(\"Hoho\")\n",
-        "else:\n",
-        "  print(\"Aww\")"
-      ],
-      "metadata": {
-        "id": "rdrwoUXVzUwd",
-        "outputId": "7f631c30-c2ea-43c2-f869-076d15cb15c9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Aww\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "###Functions"
-      ],
-      "metadata": {
-        "id": "bCiUIpl91h0v"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# void DeleteUser(int userid){\n",
-        "#      delete(userid);\n",
-        "# }\n",
-        "\n",
-        "def delete_user (userid):\n",
-        "    print(\"Successfully deleted all user: {}\".format(userid))\n",
-        "\n",
-        "def delete_all_users ():\n",
-        "    print(\"Perfect.\")"
-      ],
-      "metadata": {
-        "id": "XUid6wB81kKr"
+        "id": "I50XPPMkUnul"
       },
       "execution_count": null,
       "outputs": []
@@ -1311,28 +1096,92 @@
     {
       "cell_type": "code",
       "source": [
-        "userid = \"Gaeb\"\n",
-        "delete_user(\"Gaeb\")\n",
+        "playlist = [\"Roses\", \"Lalisa\", \"BMW\"]\n",
+        "print('Now Playing:\\n')\n",
+        "for song in playlist:\n",
+        "  print(song)"
+      ],
+      "metadata": {
+        "id": "YLiCSnpMV3zu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Flow Control"
+      ],
+      "metadata": {
+        "id": "sDUfYZclWBWx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Condition Statements"
+      ],
+      "metadata": {
+        "id": "Ia0PhjPrWFrr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numeral1, numeral2 = 19, 12\n",
+        "if(numeral1 == numeral2):\n",
+        "  print(\"Wow\")\n",
+        "elif(numeral1>numeral2):\n",
+        "  print(\"Yehey\")\n",
+        "else:\n",
+        "      print(\"Ohh\")"
+      ],
+      "metadata": {
+        "id": "bRATWcBUWK9X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Functions"
+      ],
+      "metadata": {
+        "id": "fWTPd5ypWebN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# void DeleteUser(int userid){\n",
+        "# delete(userid);\n",
+        "# }\n",
+        "\n",
+        "def delete_user(userid):\n",
+        "  print(\"Succesfully deleted user: {}\".format(userid))\n",
+        "\n",
+        "def delete_all_users():\n",
+        "  print(\"Avengers Endgame\")"
+      ],
+      "metadata": {
+        "id": "B6QwYarHXJcw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "userid = \"Marc\"\n",
+        "delete_user(\"Marc\")\n",
         "delete_all_users()"
       ],
       "metadata": {
-        "id": "r29yPQVI2ZAd",
-        "outputId": "b7abd2f5-8d1a-47d8-bd0d-6a8fe696b5e9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ilq09sULXPOm"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Successfully deleted all user: Gaeb\n",
-            "Perfect.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1344,7 +1193,7 @@
         "  return 2**exponent"
       ],
       "metadata": {
-        "id": "SJRGvwco3m-9"
+        "id": "LX3vdr6mXZVw"
       },
       "execution_count": null,
       "outputs": []
@@ -1352,32 +1201,50 @@
     {
       "cell_type": "code",
       "source": [
-        "#addend1, addend2 = 55, 70\n",
-        "#add(addend1, addend2)\n",
+        "addend1, addend2 = 18, 22\n",
+        "add(addend1, addend2)\n",
         "\n",
-        "exponent = 15\n",
+        "exponent = 6\n",
         "power_of_base2(exponent)"
       ],
       "metadata": {
-        "id": "Xwf0u9vM4An8",
-        "outputId": "d0b002e3-c906-40d8-bf88-c444d87b582f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "n9QokRCMXcT5"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "32768"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 42
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Grade Calculator"
+      ],
+      "metadata": {
+        "id": "Jp9NS30PKXPD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w_pg, w_mg, w_fg = 0.3, 0.3, 0.4\n",
+        "Name = input(\"Enter your name:\")\n",
+        "Course = input (\"Enter your course: \")\n",
+        "pg = float (input (\"Enter Prelim Grade: \"))\n",
+        "mg = float (input (\"Enter Midterm Grade: \"))\n",
+        "fg = float (input (\"Enter Final Grade: \"))\n",
+        "sem_grade = (pg*w_pg)+(mg*w_mg)+(fg*w_fg)\n",
+        "print (\"Hello {}, from {}, your semestral grade for this subject is: {}\". format(Name, Course, round(sem_grade, 2)))\n",
+        "if(sem_grade >70.00):\n",
+        "  print(\"\\U0001F600\")\n",
+        "elif(sem_grade == 70.00):\n",
+        "  print(\"\\U0001F606\")\n",
+        "else:\n",
+        "  print(\"\\U0001F62D\")"
+      ],
+      "metadata": {
+        "id": "iROuMTDbKfOn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
